# native-architectural-masking

./: .gitignore  README.md  pyproject.toml
src/: train.py  tune.py  utils.py
src/data/: dataset.py
src/masking/: mask.py  mask_generator.py
src/models/: cnn.py
