[project]
name = "mask-tune"
version = "0.1.0"
description = "Implementing and Extending MaskTune"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
